# cop-network-webapp

./: .gitignore  Makefile  Procfile  README.md  conda-requirements.txt  environment.yml  graphs_maker.py  main.py  michelle_suck_it.py  prepare_coauthor_counts.ipynb  pyproject.toml  requirements.txt  scrape.py
app/: graphing.py  main.py  utils.py
data/: COPscholars.csv  IPOP-Scholars.csv  SUREscholars.csv  cop-graph-positions.pkl  cop-graph.pkl  ipop-graph-positions.pkl  ipop-graph.pkl  poc_graph.pkl  poc_pos.pkl  scraped.json  scraped_poc.json  scraped_sure.json  sure-graph.pkl  sure-pos.pkl
utils/: graphing.py  utils.py
