[tool.poetry]
name = "cop-network-webapp"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
networkx = "^2.5.1"
dash = "^1.19.0"
dash-bootstrap-components = "^0.12.0"
gunicorn = "^20.1.0"
scholar-network = "^0.1.11"
numpy = "^1.21.2"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
pytest = "^6.2.3"
rich = "^10.1.0"
ipython = "^7.22.0"
tqdm = "^4.62.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

