[tool.poetry]
name = "cop-network-webapp"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
plotly = "^5.2.1"
dash = "^1.21.0"
networkx = "^2.6.2"
dash-bootstrap-components = "^0.13.0"
python-dotenv = "^0.19.0"
numpy = "^1.21.2"
scholar-network = "^0.2.2"
gunicorn = "^20.1.0"
scipy = "^1.7.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
pytest = "^6.2.3"
rich = "^10.1.0"
ipython = "^7.22.0"
tqdm = "^4.62.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

